# medi_consulta

./: .gitignore  .pre-commit-config.yaml  CLINICAL_SAFETY.md  Dockerfile  GEMINI.md  pyproject.toml  railway.toml  settings.toml
.github/workflows/: ci.yml
app/: main.py
app/cli/: main.py
app/core/: audit.py  config.py  database.py  dependencies.py  email.py  events.py  idempotency.py  locks.py  logging.py  models.py  note_locks.py  pagination.py  permissions.py  security.py  settings.toml  telemetry.py  worker_settings.py
app/docs/: ARCHITECTURE_CONTEXT.md
app/modules/appointments/: models.py  notifier.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: policies.py  repository.py  router.py  schemas.py  service.py
app/modules/autosave/: repository.py  router.py
app/modules/clinical_sessions/: repository.py  router.py  schemas.py  service.py
app/worker/: appointments_worker.py  realtime_worker.py
docs/arquitecture/: 01-system-design.md  02-project-structure.md  03-domain-modules.md  04-clinical-model.md  05-persistence-events.md  06-api-patterns.md  07-standards-security.md
docs/desicions/: deployment-stack.md  escalabilidad-futura.md  mejoras-profesionales.md  ventajas-stack.md
docs/runbooks/: 01-testing-plan.md  02-observability-plan.md  03-security-plan.md  04-infrastructure-plan.md  deployment-railway.md  manual-validation-flow.md  operations-manual.md
migrations/: env.py
migrations/versions/: add_appointments_and_core.py  add_auth_reset_tokens.py  add_triage_and_emergency_contact.py  ai_copilot_001_add_tables.py  audit_saas_001_enhancements.py  b3630857c370_initial_schema.py  clinical_sessions_add_user_id.py  fix_outbox_events_schema.py  fix_outbox_uuid_001_id_type.py  org_profile_001_expand_fields.py  patients_active_001_add_column.py  patients_add_phone_001.py  patients_unify_status.py  sessions_active_001_add_column.py  signing_identity_001_professional_identities.py  signing_legal_artifacts_001.py  signing_tables_001_add_signing_tables.py  signing_tables_fix_columns.py  staff_assignments_001.py  update_reminders_12h_5m.py
tests/: conftest.py
tests/e2e/: test_clinical_workflow.py
tests/integration/: test_database_connection.py
(+80 files in other folders)
