[project]
name = "medi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=1.50.0",
    "google-genai>=0.4.0",
    "google-auth>=2.35.0",
    "resend>=2.4.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "arq>=0.25.0",
    "asyncpg>=0.31.0",
    "autoflake>=2.3.3",
    "dynaconf>=3.2.12",
    "fastapi>=0.128.0",
    "fastapi-limiter>=0.2.0",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "isort>=8.0.0",
    "langchain>=1.2.8",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "rich>=14.3.2",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.46",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "weasyprint>=68.1",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "S",  # flake8-bandit (Security)
]
ignore = ["E501"] # Ignore line length errors (handled by formatter)

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests", "venv", ".venv"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "safety>=3.7.0",
]

